[metadata]
name = sheet2dict
version = 0.0.1
url = https://github.com/Pytlicek/sheet2dict
author = Tomas Pytel
author_email = pytlicek@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Simple XLSX and CSV to dictionary converter
long_description = file: README.md
long_description_content_type = text/markdown
install_requires=['csv', 'openpyxl']

[options]
python_requires = >=3.6
