[metadata]
name = sheet2dict
author = Tomas Pytel
author_email = pytlicek@gmail.com
description = Simple XLSX and CSV to dictionary converter
url = https://github.com/Pytlicek/sheet2dict
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires = openpyxl
python_requires = >=3.6
